# compbio-hackathon-2024-ccaossffpwsi

./: .gitignore  README.md  pyproject.toml
ccaossffpwsi/: example.py  interfaces.py  paff.py
notebooks/: test.ipynb
