[tool.poetry]
name = "ccaossffpwsi"
version = "0.0.1"
description = ""
authors = ["mayank-singh-sikarwar <m.sikarwar@crukscotlandinstitute.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openslide-python = "^1.3.1"
tifffile = "^2024.5.22"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
